--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.9.38",
+    "@types/papaparse": "^5.3.9",
     "chart.js": "^4.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
