--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/chart.js": "^2.9.38",
     "@types/papaparse": "^5.3.9",
     "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
